--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nivo/line": "0.79.1",
     "@nivo/pie": "0.80.0",
     "@nivo/tooltip": "0.79.0",
+    "@react-hook/media-query": "^1.1.1",
     "@reduxjs/toolkit": "1.9.5",
     "@testing-library/dom": "9.2.0",
     "@testing-library/jest-dom": "5.16.5",
@@ -50,6 +51,7 @@
     "react-dom": "18.2.0",
     "react-export-excel": "^0.5.3",
     "react-fullcalendar": "^1.0.0",
+    "react-icons": "^4.10.1",
     "react-native": "0.71.7",
     "react-pro-sidebar": "0.7.1",
     "react-redux": "8.0.5",
