--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
     "apexcharts": "^3.39.0",
+    "bcrypt": "^5.1.1",
     "chart.js": "^4.3.0",
     "d3-geo": "^3.1.0",
     "file-saver": "^2.0.5",
