--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@ashvin27/react-datatable": "^1.5.3",
+    "@ashvin27/react-datatable": "^1.4.0",
     "@emotion/react": "11.10.8",
     "@emotion/styled": "11.10.8",
     "@fullcalendar/core": "5.11.4",
@@ -13,6 +13,7 @@
     "@fullcalendar/react": "5.11.4",
     "@fullcalendar/timegrid": "5.11.4",
     "@mui/icons-material": "5.11.16",
+    "@mui/lab": "^5.0.0-alpha.144",
     "@mui/material": "5.12.2",
     "@mui/system": "5.12.1",
     "@mui/x-data-grid": "5.17.26",
