--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "18.2.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@fullcalendar/core": "5.11.4",
     "@fullcalendar/daygrid": "5.11.4",
     "@fullcalendar/interaction": "5.11.4",
@@ -11,10 +13,9 @@
     "@fullcalendar/timegrid": "5.11.4",
     "@mui/icons-material": "5.11.16",
     "@mui/lab": "^5.0.0-alpha.144",
-    "@mui/material": "5.12.2",
+    "@mui/material": "^5.12.2",
     "@mui/system": "5.12.1",
     "@mui/x-data-grid": "5.17.26",
-  
     "@react-hook/media-query": "^1.1.1",
     "@reduxjs/toolkit": "1.9.5",
     "@testing-library/dom": "9.2.0",
@@ -37,14 +38,16 @@
     "prop-types": "15.8.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
-
     "react-chartjs-2": "^5.2.0",
+    "react-compare-image": "^3.4.0",
+    "react-cropper": "^2.3.3",
     "react-data-export": "^0.6.0",
     "react-datatable": "^0.0.31",
     "react-dom": "18.2.0",
     "react-export-excel": "^0.5.3",
     "react-fullcalendar": "^1.0.0",
     "react-icons": "^4.10.1",
+    "react-image-crop": "^10.1.8",
     "react-native": "0.71.7",
     "react-pro-sidebar": "0.7.1",
     "react-redux": "8.0.5",
