--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-data-export": "^0.6.0",
     "react-datatable": "^0.0.31",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-dropzone-uploader": "^2.11.0",
     "react-export-excel": "^0.5.3",
     "react-fullcalendar": "^1.0.0",
@@ -57,9 +58,11 @@
     "react-scripts": "5.0.1",
     "react-simple-maps": "^3.0.0",
     "react-table": "^7.8.0",
+    "react-tooltip": "^5.21.5",
     "recharts": "^2.5.0",
     "redux": "4.2.1",
     "typescript": "4.9.5",
+    "uuid": "^9.0.1",
     "web-vitals": "2.1.4",
     "xlsx": "^0.18.5",
     "yup": "0.32.11"
